# sgd-annotator

./: .gitignore  Cargo.toml  devenv.nix
src/: data.rs  fasta.rs  lib.rs  main.rs  tests.rs  translator.rs
