[package]
name = "sgd-annotator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.26"
glob = "0.3.1"
linked-hash-map = "0.5.6"
log = "0.4.19"
rayon = "1.7.0"
regex = "1.8.3"
